--- a/todolist.css
+++ b/todolist.css
@@ -46,7 +46,7 @@
     background-color:cornsilk;
 }
 body{
-    background-color: red;
+    background-color: #fff;
 }
 .parent{
     background-color: aliceblue;
